--- a/assets/v1/mailingpresets.css
+++ b/assets/v1/mailingpresets.css
@@ -17,7 +17,7 @@
   position: absolute;
   top: 0.25em;
   left: 1.5em;
-  background-image: url("/sites/all/modules/civicrm/i/logo_lg.png");
+  background-image: url("logo_lg.png");
   background-repeat: no-repeat;
   background-size: 25px auto;
   width: 25px;
